// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits accepts a custom className 1`] = `
<div
  className="cvi-Hits MyCustomHits"
  style={Object {}}
>
  <div
    className="cvi-Hits-list"
  >
    <div
      className="cvi-Hits-item"
    >
      <div
        id="0"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="1"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="2"
      />
    </div>
  </div>
</div>
`;

exports[`Hits accepts a hit prop 1`] = `
<div
  className="cvi-Hits"
  style={Object {}}
>
  <div
    className="cvi-Hits-list"
  >
    <div
      className="cvi-Hits-item"
    >
      <div
        id="0"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="1"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="2"
      />
    </div>
  </div>
</div>
`;

exports[`Hits shows loading indicator when loading prop is true 1`] = `
<svg
  className="cvi-Hits-loadingIcon"
  height="18"
  stroke="#444"
  viewBox="0 0 38 38"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      strokeWidth="2"
      transform="translate(1 1)"
    >
      <circle
        cx="18"
        cy="18"
        r="18"
        strokeOpacity=".5"
      />
      <path
        d="M36 18c0-9.94-8.06-18-18-18"
      >
        <animateTransform
          attributeName="transform"
          dur="1s"
          from="0 18 18"
          repeatCount="indefinite"
          to="360 18 18"
          type="rotate"
        />
      </path>
    </g>
  </g>
</svg>
`;
